WebCore/bindings/js/JSHTMLDocumentCustom.cpp
@@ -115,9 +115,8 @@ void JSHTMLDocument::setLocation(ExecState* exec, JSValue* value)
     if (activeFrame)
         str = activeFrame->document()->completeURL(str);
 
-    // We want a new history item if this JS was called via a user gesture
-    bool userGesture = static_cast<ScriptInterpreter*>(exec->dynamicInterpreter())->wasRunByUserGesture();
-    frame->loader()->scheduleLocationChange(str, activeFrame->loader()->outgoingReferrer(), !userGesture);
+    // We always want a new history item when assigning to document.location.
+    frame->loader()->scheduleLocationChange(str, activeFrame->loader()->outgoingReferrer(), false, true);
 }
 
 // Custom functions
